--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,17 @@
     <string name="action_settings">Settings</string>
     <string name="button_join_game">Join Game!</string>
     <string name="title_activity_play_game">Play Game</string>
-
+    <string name="text_view_tank_id">Tank ID = </string>
+    <string name="text_view_grid"></string>
+    <string name="button_fire">Fire!</string>
+    <string name="button_quit">Quit</string>
+    <string name="welcome_text_view">Welcome to BulletZoneII</string>
+    <string name="wall">&#9632;</string>
 
     <!--Button String Values-->
-    <string name="button_move_left">Left</string>
-    <string name="button_move_right">Right</string>
-    <string name="button_move_up">Up</string>
-    <string name="button_move_down">Down</string>
+    <string name="button_move_left">&#8656;</string>
+    <string name="button_move_right">&#8658;</string>
+    <string name="button_move_forward">&#8657;</string>
+    <string name="button_move_backward">&#8659;
+    </string>
 </resources>
